# Morris-HPS-5015-Furnace-Data-Logging

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Type K Thermocouple Reference Chart.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  datalog.cpp  datalog.h  display.cpp  display.h  log.sln  log.vcxproj  log.vcxproj.filters  main.cpp  test.csv  wtf.csv
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Debug/: .csv  wtf.csv
WF_SDK/: logic.cpp  wtf.csv
WF_SDK/protocol/: dwf.h
log.dir/Debug/: log.exe.recipe
log.dir/Debug/log.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
log_autogen/: mocs_compilation_Debug.cpp
log_autogen/include_Debug/EWIEGA46WW/: moc_display.cpp  moc_display.cpp.d
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
